--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(SDL_RAYCASTER)
 
 include_directories(include)
 
-add_compile_options(-O0)
+add_compile_options(-O2 -Wall -Wextra)
 
 add_executable(raycaster)
 
@@ -17,5 +17,3 @@ target_link_libraries(raycaster SDL2_ttf)
 
 target_link_libraries(raycaster m)
 target_link_libraries(raycaster pthread)
-
-#set_target_properties(raycaster PROPERTIES LINK_FLAGS "-s USE_SDL=2 -s USE_SDL_TTF=2 --preload-file assets")#emscripten
